# rpengine

./: .gitignore  .gitmodules  NOTICE  README.md  TRADEMARKS.md  design-qa.md  index.html  package-lock.json  package.json  rust-toolchain.toml  spec_v2.md  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.toml
crates/rp-engine-core/: Cargo.toml
crates/rp-engine-core/src/: app.rs  audio.rs  contract.rs  json_core.rs  lib.rs  prompt.rs  session.rs  settings.rs  text.rs  vad.rs  worker.rs
docs/: character-card-v2-transport.md  file-transport-v1.md  first-party-wasm-core.md  protocol-v3.md
public/: _headers  _redirects  _routes.json  audio-worklet.js  manifest.webmanifest  microphone-worklet.js  sw.js
scripts/: audit-production-bundle.mjs  build-core.mjs  moonshine-v2-native-parity.cpp  run-moonshine-v2-parity.mjs  setup-core.mjs  sync-litert-wasm.mjs  sync-litert-wasm.test.mjs  verify-core-wasm.mjs  verify-model-origins.mjs  verify-moonshine-js.mjs  verify-moonshine-native.mjs
src/: app-host.ts  audio-trim.test.ts  audio-trim.ts  audio-wire.test.ts  audio-wire.ts  audio.ts  browser-voice-capture.test.ts  browser-voice-capture.ts  card-sync.test.ts  card-sync.ts  character-card-v2.ts  core-contract.test.ts  core-contract.ts  core.ts  diagnostics.test.ts  diagnostics.ts  engine-ownership.test.ts  engine-ownership.ts  expression.ts  filesystem-mailbox-adapter.test.ts  filesystem-mailbox-adapter.ts  fire-red-vad-audio.test.ts  fire-red-vad-audio.ts  fire-red-vad-cold-start.test.ts  fire-red-vad-runtime.ts  fire-red-vad-state.test.ts  fire-red-vad-state.ts  (+45 more)
(+10 files in other folders)
