[package]
name = "rp-engine-core"
version = "1.0.0"
edition = "2021"
license = "AGPL-3.0-only"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22.1"
icu_segmenter = { version = "=2.2.0", default-features = false, features = ["compiled_data"] }
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.135", features = ["preserve_order"] }
sha2 = "0.10.8"
unicode-normalization = "0.1.24"
wasm-bindgen = "=0.2.100"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = 0
incremental = false
